non working cards

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
             
             <section class="col-12 col-md-1" > <!-- navigation wrapper -->
                 <section><!-- Logo and name go here-->
-                    <section class="">
-                        <img src="assets/Fat_Angelo's_Logo.png"  style="width:100px; padding-right: 15px;" class="inline"></img>
-                    </section> 
+                        <section class="">
+                            <img src="assets/Fat_Angelo's_Logo.png"  style="width:100px; padding-right: 15px;" class="inline"></img>
+                        </section> 
                 </section>
-                <section class="pb-3 text-center fw-bolder" > <!-- Links go here-->
-                    <a href="/index.html" class="text-uppercase">Home</a>
-                    <a href="/menu.html" class="text-uppercase">Menu</a>
-                    <a href="/gallery.html" class="text-uppercase">Gallery</a>
-                    <a href="/contact.html" class="text-uppercase">Contact</a>
-                    <a href="/aboutus.html" class="text-uppercase">About Us</a>
-                </section>
+                        <section class="pb-3 text-center fw-bolder"  > <!-- Links go here-->
+                            <a href="/index.html" class="text-uppercase">Home</a>
+                            <a href="/menu.html" class="text-uppercase">Menu</a>
+                            <a href="/gallery.html" class="text-uppercase">Gallery</a>
+                            <a href="/contact.html" class="text-uppercase">Contact</a>
+                            <a href="/aboutus.html" class="text-uppercase">About Us</a>
+                        </section>
             </section>
             <!-- main content wrapper-->
             <section class="col col-md-11 text-center bg-secondary" style="padding-top: 10px; height:1200px" >
@@ -33,7 +33,7 @@
 
                     <!-- Jumbotron wrapper-->
                     <section class="jumbotron text-white " style="padding-bottom: 150px; padding-top: 50px;">
-                        <h1 class="display-1">Decouvrez notre univers</h1>
+                        <h1 class="display-1 text-uppercase">Big Jim's Pizza</h1>
                         <p class="lead">Si vous aimez les pizzas, vous allez être servi.</p>
                         <hr class="my-4">
                         <p>Si vous n'appreciez pas les pizzas, passez votre chemin pauvre fou !</p>
@@ -43,10 +43,10 @@
                     <section class="d-flex flex-row" style="padding:5px;"> <!-- twin containers' container -->
                             <!-- twin cont-->
                             <section class="bg-light mx-1 py-3 rounded">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita laborum eos, perspiciatis cumque quaerat, earum voluptatum voluptate rem molestiae debitis labore placeat? Sequi assumenda voluptatibus rem corrupti! Libero, iusto ea!
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi illo nobis esse rerum sint reprehenderit nihil alias praesentium iusto rem eum sit, consequuntur provident fugit iure magnam eius nam exercitationem eligendi. Sit voluptates hic labore dicta, atque molestias minima earum necessitatibus iste tempore id eligendi ipsam qui temporibus reprehenderit cumque nobis. Consequatur doloremque corporis magni? Laboriosam, similique labore! Nemo nesciunt consequatur ipsum eligendi aperiam repellendus deleniti, accusantium, ipsam molestiae maiores provident reiciendis placeat? Quae quisquam reiciendis distinctio deserunt voluptatum natus incidunt ipsam dicta minus expedita saepe consequuntur perferendis, repudiandae ea numquam magni? Ea est eveniet voluptatem, similique neque temporibus sit!
                             </section>
                             <section class="bg-light mx-1 py-3 px-1 rounded">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita laborum eos, perspiciatis cumque quaerat, earum voluptatum voluptate rem molestiae debitis labore placeat? Sequi assumenda voluptatibus rem corrupti! Libero, iusto ea!
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi illo nobis esse rerum sint reprehenderit nihil alias praesentium iusto rem eum sit, consequuntur provident fugit iure magnam eius nam exercitationem eligendi. Sit voluptates hic labore dicta, atque molestias minima earum necessitatibus iste tempore id eligendi ipsam qui temporibus reprehenderit cumque nobis. Consequatur doloremque corporis magni? Laboriosam, similique labore! Nemo nesciunt consequatur ipsum eligendi aperiam repellendus deleniti, accusantium, ipsam molestiae maiores provident reiciendis placeat? Quae quisquam reiciendis distinctio deserunt voluptatum natus incidunt ipsam dicta minus expedita saepe consequuntur perferendis, repudiandae ea numquam magni? Ea est eveniet voluptatem, similique neque temporibus sit!
                             </section>
 
 
