--- a/contact.html
+++ b/contact.html
@@ -7,14 +7,14 @@
     <title>La Trattoria - Home page</title>
     <link rel="stylesheet" href="style.css" class="style">
 </head>
-<body >
+<body class="bg-secondary" >
     <section class="container" >
         <section class="row" >
             
-            <section class="col-12 col-md-1" > <!-- navigation wrapper -->
+            <section class="col-12 col-md-1 bg-danger" > <!-- navigation wrapper -->
                 <section><!-- Logo and name go here-->
                     <section class="">
-                        <img src="assets/Fat_Angelo's_Logo.png"  style="width:100px; padding-right: 15px;" class="inline"></img>
+                        <img src="assets/bigjimlogo.png"  style="width:100px; padding-right: 20px;" class="inline"></img>
                         <span style="font-size:8px;"></span>
                     </section> 
                 </section>
@@ -27,7 +27,7 @@
                 </section>
             </section>
             <!-- main content wrapper-->
-            <section class="col col-md-11 text-center bg-secondary" style="padding-top: 10px; height:1200px" >
+            <section class="col col-md-11 text-center" style="padding-top: 10px; height:1200px" >
                 <div class="bg-light rounded-1 mt-3 mx-5 p-2"> <!-- Contact header-->
                     If you have any suggestions or feedback, please contact us. <br>
                     We will recontact you... maybe
