--- a/gallery.html
+++ b/gallery.html
@@ -7,14 +7,14 @@
     <title>La Trattoria - Our Menu</title>
     <link rel="stylesheet" href="style.css" class="style">
 </head>
-<body >
+<body  class="bg-secondary">
     <section class="container" >
         <section class="row" >
             
-            <section class="col-12 col-md-1" > <!-- navigation wrapper -->
+            <section class="col-12 col-md-1 bg-danger" > <!-- navigation wrapper -->
                 <section><!-- Logo and name go here-->
                     <section class="">
-                        <img src="assets/Fat_Angelo's_Logo.png"  style="width:100px; padding-right: 15px;" class="inline"></img>
+                        <img src="assets/bigjimlogo.png"  style="width:100px; padding-right: 20px;" class="inline"></img>
                     </section> 
                 </section>
                 <section class="pb-3 text-center fw-bolder" > <!-- Links go here-->
