--- a/menu.html
+++ b/menu.html
@@ -7,14 +7,14 @@
     <title>La Trattoria - Our Menu</title>
     <link rel="stylesheet" href="style.css" class="style">
 </head>
-<body>
+<body  class="bg-secondary"> 
     <section class="container" >
         <section class="row" >
             
-            <section class="col-12 col-md-1" > <!-- navigation wrapper -->
+            <section class="col-12 col-md-1 bg-danger" > <!-- navigation wrapper -->
                 <section><!-- Logo and name go here-->
                     <section class="">
-                        <img src="assets/Fat_Angelo's_Logo.png"  style="width:100px; padding-right: 15px;" class="inline"></img>
+                        <img src="assets/bigjimlogo.png" alt="Big Jim's Pizza logo"  style="width:100px; padding-right: 20px;" class="inline"></img>
                     </section> 
                 </section>
                 <section class="pb-3 text-center fw-bolder" > <!-- Links go here-->
@@ -26,7 +26,7 @@
                 </section>
             </section>
             <!-- main content wrapper-->
-            <section class="col col-md-11 bg-secondary" style="padding-top: 10px; height:1200px" >
+            <section class="col col-md-11" style="padding-top: 10px; height:1200px" >
 
                 <section class="bg-white text-center px-1 py-1 rounded-3"><!-- menu header-->
 
