nice working navbar

--- a/menu.html
+++ b/menu.html
@@ -11,18 +11,18 @@
     <section class="container" >
         <section class="row" >
             
-            <section class="col-12 col-md-1 bg-danger" > <!-- navigation wrapper -->
+            <section class="col-12 col-md-1 bg-danger"> <!-- navigation wrapper -->
                 <section><!-- Logo and name go here-->
                     <section class="">
                         <img src="assets/bigjimlogo.png" alt="Big Jim's Pizza logo"  style="width:100px; padding-right: 20px;" class="inline"></img>
                     </section> 
                 </section>
-                <section class="pb-3 text-center fw-bolder" > <!-- Links go here-->
-                    <a href="/index.html" class="text-uppercase">Home</a>
-                    <a href="/menu.html" class="text-uppercase">Menu</a>
-                    <a href="/gallery.html" class="text-uppercase">Gallery</a>
-                    <a href="/contact.html" class="text-uppercase">Contact</a>
-                    <a href="/aboutus.html" class="text-uppercase">About Us</a>
+                <section class="pb-3 text-left fw-bolder"> <!-- Links go here-->
+                    <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                    <a class="nav-link" href="/gallery.html">Gallery</a>
+                    <a class="nav-link" href="/menu.html">Our Menu</a>
+                    <a class="nav-link" href="/contact.html">Contact us</a>
+                    <a class="nav-link" href="/aboutus.html">Our Restaurants</a>
                 </section>
             </section>
             <!-- main content wrapper-->
@@ -128,6 +128,7 @@
             </section>
         </section>
     </section>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
 </body>
 </html>
