--- a/aboutus.html
+++ b/aboutus.html
@@ -8,31 +8,33 @@
     <link rel="stylesheet" href="style.css" class="style">
 </head>
 <body class="bg-secondary" >
+    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+        <div class="container-fluid">
+          <img src="assets/bigjimlogo.png" class="navbar-brand" href="#"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav text-uppercase fw-bolder">
+                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                <a class="nav-link" href="/gallery.html">Gallery</a>
+                <a class="nav-link" href="/menu.html">Our Menu</a>
+                <a class="nav-link" href="/contact.html">Contact us</a>
+                <a class="nav-link" href="/aboutus.html">Our Restaurants</a>
+            </div>
+          </div>
+        </div>
+      </nav>
     <section class="container" >
         <section class="row" >
-            
-            <section class="col-12 col-md-1 bg-danger pb-2" > <!-- navigation wrapper -->
-                <section><!-- Logo and name go here-->
-                    <section class="">
-                        <img src="assets/bigjimlogo.png"  style="width:100px; padding-right: 20px;" class="inline"></img>
-                    </section> 
-                </section>
-                <section class="flex  text-center fw-bolder" > <!-- Links go here-->
-                    <a href="/index.html" class="text-uppercase">Home</a>
-                    <a href="/menu.html" class="text-uppercase">Menu</a>
-                    <a href="/gallery.html" class="text-uppercase">Gallery</a>
-                    <a href="/contact.html" class="text-uppercase">Contact</a>
-                    <a href="/aboutus.html" class="text-uppercase">About Us</a>
-                </section>
-            </section>
             <!-- main content wrapper-->
-            <section class="col col-md-11 text-center " style="padding-top: 10px; height:1200px;" >
+            <section class="col col-md text-center " style="padding-top: 10px; height:1200px;" >
 
                 <div class="container">
-                    <section class="bg-light rounded-1 mt-2 ms-5 p-2">
+                    <section class="bg-light rounded-1 mt-2 ms-5 p-2 ">
                         <span>Here you can find all our restaurants</span>
                     </section><!-- franchise header-->
-                    <div class="d-flex justify-content-between">   
+                    <div class="d-flex justify-content-around">   
                                    
                         <div class="col-1">                       
                             <div class="card m-2" style="width: 18rem;">
@@ -77,5 +79,7 @@
             </section>
         </section>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
 </body>
 </html>
