changed color scheme

--- a/aboutus.html
+++ b/aboutus.html
@@ -7,8 +7,8 @@
     <title>La Trattoria - Our Menu</title>
     <link rel="stylesheet" href="style.css" class="style">
 </head>
-<body class="bg-secondary" >
-    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+<body class="color-pizza-2" >
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom border-1 border-dark color-pizza-3">
         <div class="container-fluid">
           <img src="assets/bigjimlogo.png" class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -16,11 +16,11 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav text-uppercase fw-bolder">
-                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-                <a class="nav-link" href="/gallery.html">Gallery</a>
-                <a class="nav-link" href="/menu.html">Our Menu</a>
-                <a class="nav-link" href="/contact.html">Contact us</a>
-                <a class="nav-link" href="/aboutus.html">Our Restaurants</a>
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link" href="#">Gallery</a>
+              <a class="nav-link" href="#">Our Menu</a>
+              <a class="nav-link" href="#">Contact us</a>
+              <a class="nav-link" href="#">Our Restaurants</a>
             </div>
           </div>
         </div>
