--- a/menu.html
+++ b/menu.html
@@ -7,24 +7,28 @@
     <title>La Trattoria - Our Menu</title>
     <link rel="stylesheet" href="style.css" class="style">
 </head>
-<body  class="bg-secondary"> 
+<body class="color-pizza-2" >
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom border-1 border-dark color-pizza-3">
+        <div class="container-fluid">
+          <img src="assets/bigjimlogo.png" class="navbar-brand" href="#"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav text-uppercase fw-bolder">
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link" href="/gallery.html">Gallery</a>
+              <a class="nav-link" href="/menu.html">Our Menu</a>
+              <a class="nav-link" href="/contact.html">Contact us</a>
+              <a class="nav-link" href="/aboutus.html">Our Restaurants</a>
+            </div>
+          </div>
+        </div>
+      </nav>
     <section class="container" >
         <section class="row" >
             
-            <section class="col-12 col-md-1 bg-danger"> <!-- navigation wrapper -->
-                <section><!-- Logo and name go here-->
-                    <section class="">
-                        <img src="assets/bigjimlogo.png" alt="Big Jim's Pizza logo"  style="width:100px; padding-right: 20px;" class="inline"></img>
-                    </section> 
-                </section>
-                <section class="pb-3 text-left fw-bolder"> <!-- Links go here-->
-                    <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-                    <a class="nav-link" href="/gallery.html">Gallery</a>
-                    <a class="nav-link" href="/menu.html">Our Menu</a>
-                    <a class="nav-link" href="/contact.html">Contact us</a>
-                    <a class="nav-link" href="/aboutus.html">Our Restaurants</a>
-                </section>
-            </section>
+
             <!-- main content wrapper-->
             <section class="col col-md-11" style="padding-top: 10px; height:1200px" >
 
