--- a/index-alt.html
+++ b/index-alt.html
@@ -7,8 +7,8 @@
     <title>La Trattoria - Home page</title>
     <link rel="stylesheet" href="style.css" class="style">
 </head>
-<body class="color-pizza-2" >
-    <nav class="navbar navbar-expand-lg navbar-light border-bottom border-1 border-dark color-pizza-3">
+<body class="bg-body" >
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom border-1 border-dark bg-danger">
         <div class="container-fluid">
           <img src="assets/bigjimlogo.png" class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,10 +45,10 @@
 
                     <section class="d-flex flex-row" style="padding:5px;"> <!-- twin containers' container -->
                             <!-- twin cont-->
-                            <section class="color-pizza-2 mx-1 p-3 rounded">
+                            <section class="bg-light mx-1 p-3 rounded">
                                 Jimbo and Jimbert, the two owners, after having worked for many years in several restaurants and pizzerias all over London, decided to embrak their own adventure. Being Neapolitan and obsessed about pizza, they thought that the borough of Ealing needed a traditional neapolitan pizzeria. So, after working with their own hands on everything and importing the wood fired oven from Italy, Big Jim's Pizza finally opened its doors to the public on Valentine’s day 2010.
                             </section>
-                            <section class="color-pizza-2 mx-1 p-3 rounded">
+                            <section class="bg-light mx-1 p-3 rounded">
                                 Big Jim's Pizza will be happy to feed everyone, from pennyless students to VIPs, with the authentic taste of Naples, according to the motto “Quality and quantity at honest prices”.  In fact pizzerias are not a sort of second-class restaurant, but a place where everyone gets treated in the same way and standards should be kept as high as possible with the desire to improve them all the time.
                             </section>
 
