--- a/template.html
+++ b/template.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" class="style">
 </head>
 <body  class="bg-secondary">
-    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom border-1 border-dark bg-danger">
         <div class="container-fluid">
           <img src="assets/bigjimlogo.png" class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
