--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="color-pizza-2">
-    <nav class="navbar navbar-expand-lg navbar-light border-bottom border-1 border-dark color-pizza-3">
+    <nav class="navbar navbar-expand-lg navbar-light color-pizza-2">
         <div class="container-fluid">
             <img src="assets/bigjimlogo.png" class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
