--- a/gallery-1.html
+++ b/gallery-1.html
@@ -15,7 +15,7 @@
 
 <body class="color-pizza-2">
   <nav class="navbar navbar-expand-lg navbar-light color-pizza-2">
-    <div class="container-fluid">
+      <div class="container-fluid">
       <img src="assets/bigjimlogo.png" class="navbar-brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,20 +32,19 @@
       </div>
     </div>
   </nav>
-
-  <div class="container gallery color-pizza-4 rounded pt-5">
+  <div class="container gallery pt-5">
     <div class="row text-center">
       <span class="fancy-text fs-1 py-2">Take a look at our Specialities</span>
     </div>
     <div class="row">
-      <div class="col-11 col-md-3 my-3 overflow-hidden">
-        <img src="assets/kiwi-1579120698.jpeg" alt="" class="rounded" />
+      <div class="col-11 col-md-3 my-3 overflow-hidden rounded">
+        <img src="assets/2E2675FB00000578-3306019-image-m-22_1446757513065.jpg" alt="" />
       </div>
-      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden">
-        <img src="assets/banananas.jpg" alt="" class="rounded" />
+      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden rounded">
+        <img src="assets/Cheese-and-Pepperoni-Pizza-Burger1.jpg" alt="" />
       </div>
-      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden" >
-        <img src="assets/p06rgyp6.jpg" alt="" class="rounded" />
+      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden rounded" >
+        <img src="assets/NEWS_180129942_AR_0_NGDONIPGHTWI.jpg" alt="" />
       </div>
 
     </div>
@@ -53,19 +52,17 @@
     </div>
 
   </div>
-  <section class=>
-    <nav aria-label="Page navigation example">
-      <!-- paginator-->
-      <ul class="pagination pagination-sm justify-content-center my-2">
-
-        <li class="page-item"><a class="page-link" href="gallery.html">1</a></li>
-        <li class="page-item"><a class="page-link" href="gallery-1.html">2</a></li>
-        <li class="page-item"><a class="page-link" href="gallery-2.html">3</a></li>
-
-      </ul>
-    </nav>
-  </section>
-
+<section class=>
+  <nav aria-label="Page navigation example"> <!-- paginator-->
+    <ul class="pagination pagination-sm justify-content-center my-2">
+      
+      <li class="page-item"><a class="page-link" href="gallery.html">1</a></li>
+      <li class="page-item"><a class="page-link" href="gallery-1.html">2</a></li>
+      <li class="page-item"><a class="page-link" href="gallery-2.html">3</a></li>
+      
+    </ul>
+  </nav>
+</section>
 
 </body>
 
