--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Big Jim's - Home page</title>
     <link rel="stylesheet" href="style.css" class="style">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
 </head>
 <body class="color-pizza-2" >
-    <nav class="navbar navbar-expand-lg navbar-light border-bottom border-1 border-dark color-pizza-3">
+    <nav class="navbar navbar-expand-lg navbar-light color-pizza-2">
         <div class="container-fluid">
           <img src="assets/bigjimlogo.png" class="navbar-brand" href="#"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,20 +39,25 @@
                     <!-- Jumbotron wrapper-->
                     <section class="jumbotron text-white " style="padding-bottom: 150px; padding-top: 50px;">
                         <h1 class="display-1 text-uppercase">Big Jim's Pizza</h1>
-                        <p class="lead">Si vous aimez les pizzas, vous allez être servi.</p>
+                        <p class="lead">If you like pizza, you're at the right place.</p>
                         <hr class="my-4">
-                        <p>Si vous n'appreciez pas les pizzas, passez votre chemin pauvre fou !</p>
+                        <p class="fst-italic">Experience pizza like never before.</p>
                         
                     </section>
 
-                    <section class="d-flex flex-row" style="padding:5px;"> <!-- twin containers' container -->
+                    <section class="d-flex flex-column" style="padding:5px;"> <!-- twin containers' container -->
                             <!-- twin cont-->
-                            <section class="color-pizza-2 mx-1 p-3 rounded">
+                            <section class="color-pizza-2 mx-1 my-1 p-3 rounded bg-white">
                                 Jimbo and Jimbert, the two owners, after having worked for many years in several restaurants and pizzerias all over London, decided to embrak their own adventure. Being Neapolitan and obsessed about pizza, they thought that the borough of Ealing needed a traditional neapolitan pizzeria. So, after working with their own hands on everything and importing the wood fired oven from Italy, Big Jim's Pizza finally opened its doors to the public on Valentine’s day 2010.
                             </section>
-                            <section class="color-pizza-2 mx-1 p-3 rounded">
+                            <section class="color-pizza-2 mx-1 my-1 p-3 rounded bg-white">
                                 Big Jim's Pizza will be happy to feed everyone, from pennyless students to VIPs, with the authentic taste of Naples, according to the motto “Quality and quantity at honest prices”.  In fact pizzerias are not a sort of second-class restaurant, but a place where everyone gets treated in the same way and standards should be kept as high as possible with the desire to improve them all the time.
                             </section>
+                            <section class="color-pizza-2 mx-1 my-1 p-3 rounded bg-white">
+                                Our passion for Italian food can be traced back to the swinging 60s - to our founder, Peter Boizot, and his love affair with Italy. Fresh out of university, a young Peter travelled and worked his way round Europe before settling in Italy.                            </section>
+                            <section class="color-pizza-2 mx-1 my-1 p-3 rounded bg-white">
+
+                                Award winning pizzas, all served up fresh from our wood-fired oven, topped with the freshest ingredients from trusted Italian suppliers... no matter what dough you choose, our pizzas are that good; we won't need to tell you to eat your crust!                            </section>
 
 
                     </section>
