--- a/gallery-2.html
+++ b/gallery-2.html
@@ -15,7 +15,7 @@
 
 <body class="color-pizza-2">
   <nav class="navbar navbar-expand-lg navbar-light color-pizza-2">
-    <div class="container-fluid">
+      <div class="container-fluid">
       <img src="assets/bigjimlogo.png" class="navbar-brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,20 +32,19 @@
       </div>
     </div>
   </nav>
-
-  <div class="container gallery color-pizza-4 rounded pt-5">
+  <div class="container gallery pt-5 ">
     <div class="row text-center">
       <span class="fancy-text fs-1 py-2">Take a look at our Specialities</span>
     </div>
     <div class="row">
-      <div class="col-11 col-md-3 my-3 overflow-hidden">
-        <img src="assets/kiwi-1579120698.jpeg" alt="" class="rounded" />
+      <div class="col-11 col-md-3 my-3 overflow-hidden rounded">
+        <img src="assets/peeps-pizza-peepza-today-170424-inline_f28fca764b8ff60d5e4628637da7559d.fit-560w.jpg" alt="" />
       </div>
-      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden">
-        <img src="assets/banananas.jpg" alt="" class="rounded" />
+      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden rounded">
+        <img src="assets/I+bring+this+up+every+time+people+mention+pineapple+pizza+_1c7ce48c84388b13cfa8b8edc991040b.jpg" alt="" />
       </div>
-      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden" >
-        <img src="assets/p06rgyp6.jpg" alt="" class="rounded" />
+      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden rounded" >
+        <img src="assets/cauliflower_pizza_today-tease-vr-150428_5a94c6e9c82cfa542618dbe9d70f2172.focal-600x300.jpg" alt="" />
       </div>
 
     </div>
@@ -54,18 +53,21 @@
 
   </div>
   <section class=>
-    <nav aria-label="Page navigation example">
-      <!-- paginator-->
+    <nav aria-label="Page navigation example"> <!-- paginator-->
       <ul class="pagination pagination-sm justify-content-center my-2">
-
-        <li class="page-item"><a class="page-link" href="gallery.html">1</a></li>
+        
+        <li class="page-item"><a class="page-link" href="gallery.html" >1</a></li>
         <li class="page-item"><a class="page-link" href="gallery-1.html">2</a></li>
         <li class="page-item"><a class="page-link" href="gallery-2.html">3</a></li>
-
+        
       </ul>
     </nav>
   </section>
-
+  <script src="js/gallerly.js"></script>
+  <script src="js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+  </script>
 
 </body>
 
