--- a/aboutus.html
+++ b/aboutus.html
@@ -38,7 +38,7 @@
                 </section>
                 <div class="row">
                     <div class="col-3">
-                        <div class="card m-2" style="width: 18rem;">
+                        <div class="card m-2 shadow" style="width: 18rem;">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2304.075872567299!2d-0.17427156439620464!3d51.494387615872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760542a4af74a7%3A0xf44ad73dd8ab4ddf!2sLa%20Trattoria%20by%20Alfredo%20Russo!5e0!3m2!1sen!2suk!4v1611839383490!5m2!1sen!2suk"
                                 width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     <div class="col-3 offset-1">
-                        <div class="card mt-2 ms-5 central-card" style="width: 18rem;">
+                        <div class="card mt-2 ms-5 shadow central-card" style="width: 18rem;">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d628.6768708756185!2d-0.48773156752001834!3d53.55116260719605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4878f3f0f78ec1d3%3A0xe2c902ae4af1d289!2sPizza%20Jim!5e0!3m2!1sen!2suk!4v1611918170722!5m2!1sen!2suk"
                                 width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div class="col-3 offset-2">
-                        <div class="card mt-2 ms-5" style="width: 18rem;">
+                        <div class="card mt-2 ms-5 shadow" style="width: 18rem;">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3374.4765875646635!2d-97.74555528437487!3d32.2452570182142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864e29a86991d5bd%3A0xa645ca5500ef2ac8!2sMrJims.Pizza!5e0!3m2!1sen!2suk!4v1611918243486!5m2!1sen!2suk"
                                 width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""
@@ -93,7 +93,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
     </script>
-
+        <footer class="footer mt-auto py-3 bg-light">
+            <div class="container  text-center">
+              <span class="text-muted">Big Jim's Pizza ltd - All rights reserved.</span>
+            </div>
+          </footer>
 </body>
 
 </html>
