--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 
 
       <!-- main content wrapper-->
-      <section class="col col-md text-center" style="padding-top: 10px; height:1200px">
+      <section class="col col-md text-center color" style="padding-top: 10px; height:1200px; color:black;">
         <div class="bg-light rounded-1 mt-3 mx-5 p-2">
           <!-- Contact header-->
           If you have any suggestions or feedback, please contact us. <br>
@@ -52,8 +52,8 @@
             <label for="country">Restaurant</label>
             <select id="restaurant" name="restaurant">
               <option value="london">London</option>
-              <option value="bangkok">Bangkok</option>
-              <option value="tokyo">Tokyo</option>
+              <option value="brigg">Brigg, UK</option>
+              <option value="texas">Texas</option>
             </select>
 
             <label for="subject">Subject</label>
@@ -74,7 +74,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
   </script>
-
+        <footer class="footer mt-auto py-3 bg-light">
+          <div class="container  text-center">
+            <span class="text-muted">Big Jim's Pizza ltd - All rights reserved.</span>
+          </div>
+        </footer>
 </body>
 
 </html>
