--- a/gallery-2.html
+++ b/gallery-2.html
@@ -37,13 +37,13 @@
       <span class="fancy-text fs-1 py-2">Take a look at our Specialities</span>
     </div>
     <div class="row">
-      <div class="col-11 col-md-3 my-3 overflow-hidden rounded">
+      <div class="col-11 col-md-3 my-3 overflow-hidden rounded  shadow  bg-danger">
         <img src="assets/peeps-pizza-peepza-today-170424-inline_f28fca764b8ff60d5e4628637da7559d.fit-560w.jpg" alt="" />
       </div>
-      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden rounded">
+      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden rounded  shadow  bg-danger">
         <img src="assets/I+bring+this+up+every+time+people+mention+pineapple+pizza+_1c7ce48c84388b13cfa8b8edc991040b.jpg" alt="" />
       </div>
-      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden rounded" >
+      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden rounded  shadow  bg-danger" >
         <img src="assets/cauliflower_pizza_today-tease-vr-150428_5a94c6e9c82cfa542618dbe9d70f2172.focal-600x300.jpg" alt="" />
       </div>
 
@@ -59,10 +59,16 @@
         <li class="page-item"><a class="page-link" href="gallery.html" >1</a></li>
         <li class="page-item"><a class="page-link" href="gallery-1.html">2</a></li>
         <li class="page-item"><a class="page-link" href="gallery-2.html">3</a></li>
+        <li class="page-item"><a class="page-link" href="gallery-3.html">4</a></li>
         
       </ul>
     </nav>
   </section>
+  <footer class="footer mt-auto py-3 bg-light">
+    <div class="container  text-center">
+      <span class="text-muted">Big Jim's Pizza ltd - All rights reserved.</span>
+    </div>
+  </footer>
   <script src="js/gallerly.js"></script>
   <script src="js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
