--- a/gallery.html
+++ b/gallery.html
@@ -33,18 +33,18 @@
     </div>
   </nav>
 
-  <div class="container gallery color-pizza-4 rounded pt-5">
+  <div class="container gallery rounded pt-5">
     <div class="row text-center">
-      <span class="fancy-text fs-1 py-2">Take a look at our Specialities</span>
+      <span class="fancy-text fs-1 py-2 ">Take a look at our Specialities</span>
     </div>
     <div class="row">
-      <div class="col-11 col-md-3 my-3 overflow-hidden">
-        <img src="assets/kiwi-1579120698.jpeg" alt="" class="rounded" />
+      <div class="col-11 col-md-3 my-3 overflow-hidden shadow  bg-danger">
+        <img src="assets/kiwi-1579120698.jpeg" alt="" class="rounded " />
       </div>
-      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden">
+      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden shadow  bg-danger">
         <img src="assets/banananas.jpg" alt="" class="rounded" />
       </div>
-      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden" >
+      <div class="col-11 col-md-3 my-3 offset-md-1 overflow-hidden shadow bg-danger" >
         <img src="assets/p06rgyp6.jpg" alt="" class="rounded" />
       </div>
 
@@ -58,14 +58,20 @@
       <!-- paginator-->
       <ul class="pagination pagination-sm justify-content-center my-2">
 
-        <li class="page-item"><a class="page-link" href="gallery.html">1</a></li>
+      
+        <li class="page-item"><a class="page-link" href="gallery.html" >1</a></li>
         <li class="page-item"><a class="page-link" href="gallery-1.html">2</a></li>
         <li class="page-item"><a class="page-link" href="gallery-2.html">3</a></li>
-
+        <li class="page-item"><a class="page-link" href="gallery-3.html">4</a></li>
+      
       </ul>
     </nav>
   </section>
-
+  <footer class="footer mt-auto py-3 bg-light">
+    <div class="container  text-center">
+      <span class="text-muted">Big Jim's Pizza ltd - All rights reserved.</span>
+    </div>
+  </footer>
 
 </body>
 
