--- a/menu.html
+++ b/menu.html
@@ -45,7 +45,7 @@
                         Please check out our monthly specialties !</span>
 
                 </section>
-                <section class="container">
+                <section class="container menu">
                     <!-- menu here-->
                     <section class="row my-2 px-0 mx-0">
                         <div class="col-12 col-md-6 align-middle">
@@ -157,6 +157,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
     </script>
+        <footer class="footer mt-auto py-3 bg-light">
+            <div class="container  text-center">
+              <span class="text-muted">Big Jim's Pizza ltd - All rights reserved.</span>
+            </div>
+          </footer>
 
 </body>
 
