--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         
                     </section>
 
-                    <section class="d-flex flex-row" style="padding:5px;"> <!-- twin containers' container -->
+                    <section class="d-flex flex-column" style="padding:5px;"> <!-- twin containers' container -->
                             <!-- twin cont-->
                             <section class="color-pizza-2 mx-1 my-1 p-3 rounded bg-white">
                                 Jimbo and Jimbert, the two owners, after having worked for many years in several restaurants and pizzerias all over London, decided to embrak their own adventure. Being Neapolitan and obsessed about pizza, they thought that the borough of Ealing needed a traditional neapolitan pizzeria. So, after working with their own hands on everything and importing the wood fired oven from Italy, Big Jim's Pizza finally opened its doors to the public on Valentine’s day 1958.
