--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav text-uppercase fw-bolder">
                 <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-                <a class="nav-link" href="/gallery.html">Gallery</a>
+                <a class="nav-link" href="restaurant/gallery.html">Gallery</a>
                 <a class="nav-link" href="/menu.html">Our Menu</a>
                 <a class="nav-link" href="/contact.html">Contact us</a>
                 <a class="nav-link" href="/aboutus.html">Our Restaurants</a>
