some corrections again

--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
 
   <div class="container gallery rounded pt-5">
     <div class="row text-center">
-      <span class="fancy-text fs-1 py-2 ">Take a look at our Specialities</span>
+      <span class="fancy-text fs-1 py-2 menu">Take a look at our Specialities</span>
     </div>
     <div class="row">
       <div class="col-11 col-md-3 my-3 overflow-hidden shadow  bg-danger">
