--- a/menu.html
+++ b/menu.html
@@ -55,42 +55,42 @@
                                 <li class="">
 
                                     <span class="fw-bold ">VEGAN SAN FILIPPO </span>
-                                    <p class="fst-italic ">Tomato sauce, vegan mozzarella, peppers, courgettes and
+                                    <p class="fst-italic ">Tomato sauce, Tide pods, peppers, courgettes and
                                         aubergines</p>
-                                    <p class="">13€</p>
+                                    <p class="badge bg-danger">13€</p>
 
                                 </li>
                                 <li class="">
                                     <span class="fw-bold">SANTA CATERINA </span>
-                                    <p class="fst-italic">Tomato sauce, mozzarella, salame Napoli, fresh chilli
+                                    <p class="fst-italic">Tomato sauce, mozzarella, A Whole damn Lobster, fresh chilli
                                         and parmesan </p>
                                     <p class="fst-italic">– Add aubergines 1.50 / olives 0.7</p>
-                                    <p class>11€</p>
+                                    <p class="badge bg-danger">34€</p>
 
                                 </li>
                                 <li class="">
                                     <span class="fw-bold">SANTA BUFALINA </span>
-                                    <p class="fst-italic">Tomato sauce, buffalo mozzarella DOP and parmesan
+                                    <p class="fst-italic">Tomato sauce, buffalo mozzarella DOP, baked beans and parmesan
                                     </p>
                                     <p class="fst-italic">– Add Parma ham 2.50</p>
-                                    <p class>10€</p>
+                                    <p class="badge bg-danger">10€</p>
 
                                 </li>
                                 <li class="">
                                     <span class="fw-bold">SAN GENNARO (Napoli) </span>
-                                    <p class="fst-italic">Tomato sauce, mozzarella, anchovies, black olives, capers
+                                    <p class="fst-italic">Tomato sauce, mozzarella, anchovies, boiled oysters, black olives, capers
                                         and oregano</p>
                                     <p class="fst-italic">- Add garlic 0.70</p>
-                                    <p class>9€</p>
+                                    <p class="badge bg-danger">9€</p>
 
                                 </li>
                                 <li class="">
                                     <span class="fw-bold">SAN GIUSEPPE </span>
-                                    <p class="fst-italic">Mozzarella, smoked mozzarella, friarielli (wild broccoli)*,
+                                    <p class="fst-italic">Mozzarella, french fries, smoked mozzarella, friarielli (wild broccoli)*,
                                         free
                                         range rare breed North Yorkshire pork sausage, parmesan</p>
                                     <p class="fst-italic">NO tomato sauce – Add ‘nduja 2.50 / olives 0.70</p>
-                                    <p class>9€</p>
+                                    <p class="badge bg-danger">11,2€</p>
 
                                 </li>
                             </ul>
@@ -103,9 +103,9 @@
                                 <p class="text-center fw-bold fs-1 fancy-text">Our Specials</p>
                                 <li class="">
                                     <span class="fw-bold">VEGAN SAN FILIPPO </span>
-                                    <p class="fst-italic">Tomato sauce, vegan mozzarella, peppers, courgettes and
+                                    <p class="fst-italic">Tomato sauce, almonds, vegan mozzarella, peppers, courgettes and
                                         aubergines</p>
-                                    <p class>10€</p>
+                                    <p class="badge bg-danger">10€</p>
 
                                 </li>
                                 <li class="">
@@ -113,24 +113,24 @@
                                     <p class="fst-italic">Tomato sauce, mozzarella, cotto ham, artichokes, black olives
                                         and parmesan </p>
                                     <p class="fst-italic">– Add mushrooms 1.50</p>
-                                    <p class>10€</p>
+                                    <p class="badge bg-danger">10€</p>
 
                                 </li>
                                 <li class="">
                                     <span class="fw-bold">SAN GIUSEPPE </span>
-                                    <p class="fst-italic">Mozzarella, smoked mozzarella, friarielli (wild broccoli)*,
+                                    <p class="fst-italic">Mozzarella, smoked mozzarella, banana, friarielli (wild broccoli)*,
                                         free
                                         range rare breed North Yorkshire pork sausage, parmesan</p>
                                     <p class="fst-italic">NO tomato sauce – Add ‘nduja 2.50 / olives 0.70</p>
-                                    <p class>9€</p>
+                                    <p class="badge bg-danger">9€</p>
 
                                 </li>
                                 <li class="">
                                     <span class="fw-bold">SAN ROCCO </span>
-                                    <p class="fst-italic">Tomato sauce, burrata pugliese, pecorino romano DOP, roasted
+                                    <p class="fst-italic">Tomato sauce, burrata pugliese, kiwi, pecorino romano DOP, roasted
                                         aubergines and wild rocket </p>
                                     <p class="fst-italic">– Add parma ham 2.50 / mozzarella 1.50</p>
-                                    <p class>9€</p>
+                                    <p class="badge bg-danger">10,3€</p>
 
                                 </li>
                                 <li class="">
@@ -138,7 +138,7 @@
                                     <p class="fst-italic">Mozzarella, mushrooms, free range rare breed North Yorkshire
                                         pork sausage,’nduja</p>
                                     <p class="fst-italic">– NO tomato sauce – Add smoked burrata 2.5</p>
-                                    <p class>9€</p>
+                                    <p class="badge bg-danger">12,5€</p>
 
                                 </li>
                             </ul>
