--- a/gallery-3.html
+++ b/gallery-3.html
@@ -34,7 +34,7 @@
   </nav>
   <div class="container gallery pt-5 ">
     <div class="row text-center">
-      <span class="fancy-text fs-1 py-2">Take a look at our Specialities</span>
+      <span class="fancy-text fs-1 py-2  menu">Take a look at our Specialities</span>
     </div>
     <div class="row">
       <div class="col-11 col-md-3 my-3 overflow-hidden rounded  shadow  bg-danger">
